Rename and move kernel recipe
Rename linux-obmc to linux-aspeed and move to the Aspeed
layer.  Like recipes for u-boot forks, recipes for kernel
forks in support of different SOCs are typically provided
in the BSP supporting the SOC.

Moved a number of phosphor-isms out of the kernel recipe and put
those in a bbappend in aspeed-layer/bbappend.

Removed COMPATIBLE_MACHINE setting.  We simply use PREFERRED_PROVIDER
in machine configuration files to set the default kernel recipe.

Tested: Booted spoon/palmetto images using QEMU
Change-Id: I7dc73629cad4789dcd5aeb0f7b6214fe064c6adc
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ast2500/conf/layer.conf
+++ b/meta-ast2500/conf/layer.conf
@@ -1,10 +1,6 @@
 # We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
-# We have recipes-* directories, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend"
-
-BBFILE_PATTERN_ast2500-layer = "^${LAYERDIR}/"
+BBFILE_PATTERN_ast2500-layer = ""
 BBFILE_COLLECTIONS += "ast2500-layer"
 LAYERVERSION_ast2500-layer = "1"
