--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,8 +1,8 @@
 # We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
-BBFILES += "${LAYERDIR}/common/recipes-*/*/*.bb \
-            ${LAYERDIR}/common/recipes-*/*/*.bbappend"
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "aspeed-layer"
 BBFILE_PATTERN_aspeed-layer = ""
