aspeed: Add ASPEEDBASE
Define a variable that recipes can use for finding the root
of the aspeed layer.  Typically this is used to refer to the
layer LICENSE for recipes that don't have any source repository.

Change-Id: I22c1af313f65dee85eccfbc82cddc51dc731876a
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,5 @@ BBFILE_COLLECTIONS += "aspeed-layer"
 BBFILE_PATTERN_aspeed-layer = ""
 LAYERVERSION_aspeed-layer = "1"
 LAYERSERIES_COMPAT_aspeed-layer = "sumo"
+
+ASPEEDBASE = '${@os.path.normpath("${LAYERDIR}/")}'
