--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,3 +7,4 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "aspeed-layer"
 BBFILE_PATTERN_aspeed-layer = ""
 LAYERVERSION_aspeed-layer = "1"
+LAYERSERIES_COMPAT_aspeed-layer = "sumo"
