Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [project]
 	description = Layer for aspeed chip bsp
 [access]
-	inheritFrom = openbmc-bitbake-repos
+	inheritFrom = openbmc-all-repos
 [submit]
 	action = rebase if necessary
 [access "refs/heads/*"]
