--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,6 +7,6 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "aspeed-layer"
 BBFILE_PATTERN_aspeed-layer = ""
 LAYERVERSION_aspeed-layer = "1"
-LAYERSERIES_COMPAT_aspeed-layer = "thud"
+LAYERSERIES_COMPAT_aspeed-layer = "thud warrior"
 
 ASPEEDBASE = '${@os.path.normpath("${LAYERDIR}/")}'
