meta-aspeed: layer.conf: set BBFILE_PATTERN
Bitbake uses this regex to associate recipes and bbappends from BBFILES
(which contains recipes and bbappends from -all- layers listed in
bblayers.conf) to this layer.  The association is then used to map the
BBFILE_PRIORITY value for this layer onto the recipes provided by this
layer.

BBFILE_PRIORITY is used to determine which recipe to use when the same
recipe appears in multiple layers.

Without BBFILE_PATTERN set, recipes in this layer will get a default
priority and not the priority specified in BBFILE_PRIORITY.

This layer doesn't set a priority anyway, so functionally this patch is
a noop but it is an improvement from a correctness standpoint, and it
makes a warning go away:

WARNING: No bb files matched BBFILE_PATTERN_foo-layer

Change-Id: I4fdc9d17745ef812d4c0f522070b582b6601227c
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,7 +5,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "aspeed-layer"
-BBFILE_PATTERN_aspeed-layer = ""
+BBFILE_PATTERN_aspeed-layer := "^${LAYERDIR}/"
 LAYERVERSION_aspeed-layer = "1"
 LAYERSERIES_COMPAT_aspeed-layer = "thud warrior"
 
