--- a/conf/machine/evb-ast2500.conf
+++ b/conf/machine/evb-ast2500.conf
@@ -1,8 +1,4 @@
-KMACHINE = "aspeed"
-KERNEL_DEVICETREE = "${KMACHINE}-ast2500-evb.dtb"
-
+KERNEL_DEVICETREE = "aspeed-ast2500-evb.dtb"
 UBOOT_MACHINE = "ast_g5_phy_config"
-
-FLASH_SIZE = "32768"
 
 require conf/machine/include/ast2500.inc
