u-boot-sdk: Move to latest
This gains support for NC-SI, and uses kconfig for the default
boot command allowing us to drop the patch to aspeed-common.h.

The defconfig has changed name. The recipe defaults to the A0 variant,
however there are no significant differences between these two, so the
same image can be used on A1.

TODO: use the defconfig

Change-Id: Ia5b432a1f6e83f9830a33a6ab7cd26bdfc331734
Signed-off-by: Joel Stanley <joel@jms.id.au>

--- a/conf/machine/evb-ast2600.conf
+++ b/conf/machine/evb-ast2600.conf
@@ -1,5 +1,5 @@
 KERNEL_DEVICETREE = "aspeed-ast2600-evb.dtb"
-UBOOT_MACHINE = "evb-ast2600_defconfig"
+UBOOT_MACHINE = "evb-ast2600a0_defconfig"
 
 require conf/machine/include/ast2600.inc
 
