--- a/conf/machine/evb-ast2600.conf
+++ b/conf/machine/evb-ast2600.conf
@@ -1,5 +1,5 @@
 KERNEL_DEVICETREE = "aspeed-ast2600-evb.dtb"
-UBOOT_MACHINE = "evb-ast2600_defconfig"
+UBOOT_MACHINE = "evb-ast2600a1_defconfig"
 
 require conf/machine/include/ast2600.inc
 
