wic: Populate hostfw partition
Populate the hostfw partition by specifying the directory to be
used as source for the filesystem. This directory is populated
by a bbappend to the hostfw recipe.

Change-Id: I7d0b0ad7f0b68469e713a80ac495800e36a98bf0
Signed-off-by: Adriana Kobylak <anoo@us.ibm.com>

--- a/wic/emmc-aspeed.wks.in
+++ b/wic/emmc-aspeed.wks.in
@@ -27,4 +27,4 @@ part --fstype=ext4 --fixed-size 64M --source bootimg-partition --label boot-b
 part --fstype=ext4 --fixed-size 1G --source rootfs --label rofs-a
 part --fstype=ext4 --fixed-size 1G --source rootfs --label rofs-b
 part --fstype=ext4 --fixed-size 7G --label rwfs
-part --fstype=ext4 --fixed-size 5G --label hostfw
+part --fstype=ext4 --fixed-size 5G --source rootfs --rootfs-dir=${STAGING_DIR_NATIVE}${datadir}/hostfw/image/ --label hostfw
