aspeed: Set ast2600 evb spi flash size to 64 MiB
AST2600 evb has 64 MiB flash by default, so machine config could
provide a default value for FLASH_SIZE.

Including obmc-bsp-common.inc for building OpenBMC image.

Signed-off-by: Troy Lee <troy_lee@aspeedtech.com>
Change-Id: I5bff964ca82c4c7191bcb2867d38a923050aa58c

--- a/conf/machine/evb-ast2600.conf
+++ b/conf/machine/evb-ast2600.conf
@@ -3,5 +3,9 @@ UBOOT_MACHINE = "ast2600_openbmc_defconfig"
 UBOOT_DEVICETREE = "ast2600a1-evb"
 
 require conf/machine/include/ast2600.inc
+require conf/machine/include/obmc-bsp-common.inc
 
 SERIAL_CONSOLES = "115200;ttyS4"
+
+# AST2600 EVB has 64MB spi flash
+FLASH_SIZE = "65536"
